@@ -155,3 +155,7 @@ is decoded and scanned
 2009-05-07 Matt Ritchie - committed version 1.3.2
 
 * Updated usage of sampleNames() on NChannelSet objects in Illumina functions to maintain consistency with Biobase
+
+2009-06-08 B Carvalho - committed version 1.3.3
+
+* Added batchQC to phenoData
